<resources>
    <string name="app_name">Activcount</string>
    <string name="app_objective">This program provides condensed visualization of financial information about your business. In addition, program provides: key ratio analysis, forecasting, and pro-forma financial statements.</string>
    <string name="company_name">Alexandre Comptabilité Spécialisé Ltée.</string>
    <string name="title_activity_attach_doc">AttachDoc</string>
    <string name="title_activity_overview">Overview</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_about_app">About this Application</string>
    <string name="credits">By: \nAlexandre Bobkov \n2019</string>
    <string name="contact_info_email">books@activcount.ca</string>
    <string name="contact_info_phone">(613) 882-8404</string>
    <string name="contact_info_website">www.activcount.ca</string>

    <string name="input_oper_name"></string>

    <string name="button_submit">SUBMIT</string>
    <string name="title_activity_nav_menu">nav_menu</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="nav_header_title">activcount</string>
    <string name="nav_header_subtitle">books@activcount.ca</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About...</string>

    <string name="menu_about">About...</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Settings</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_slideshow">Metrics</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
