<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="15dp"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_000"
        android:layout_width="56dp"
        android:layout_height="57dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="16dp"
        android:onClick="launchnavMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_001"
        android:layout_width="56dp"
        android:layout_height="57dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="launchBizInfo"
        app:backgroundTint="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="?attr/actionModeSelectAllDrawable" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="298dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/company_name"
        android:textAllCaps="true"
        android:textColor="#08B30F"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/footer_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="572dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/contact_info_email"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/footer_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/contact_info_website"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/footer_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/footer_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/contact_info_phone"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/footer_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="135dp"
        android:layout_height="25dp"
        android:layout_marginTop="100dp"
        android:fadingEdge="horizontal|vertical"
        android:indeterminate="false"
        android:max="5000"
        android:orientation="horizontal"
        android:progress="1750"
        android:scrollbarStyle="insideInset"
        android:secondaryProgress="1500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="133dp"
        android:layout_height="25dp"
        android:layout_marginTop="100dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="Revenues to-date"
        app:layout_constraintEnd_toStartOf="@+id/progressBar3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="288dp"
        android:layout_height="302dp"
        android:layout_marginBottom="126dp"
        android:clickable="true"
        android:visibility="visible"
        android:weekSeparatorLineColor="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="286dp"
        android:layout_height="18dp"
        android:layout_marginBottom="428dp"
        android:gravity="center|center_horizontal"
        android:text="Upcoming Dates"
        android:textAllCaps="true"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>